cluster/e_est_fr_3
  File "/apps/python-3.5.2/lib/python3.5/site.py", line 176
    file=sys.stderr)
        ^
SyntaxError: invalid syntax
